fix recipe image on tablet/phone

--- a/client/src/styles/Recipe.scss
+++ b/client/src/styles/Recipe.scss
@@ -68,6 +68,7 @@
   font-size: 38px;
   @media screen and (max-width: 700px) {
     font-size: 30px;
+    top: 238px;
   }
 }
 
