--- a/client/src/styles/ViewRecipe.scss
+++ b/client/src/styles/ViewRecipe.scss
@@ -3,6 +3,10 @@
   margin-top: 40px;
 
   .recipeImage {
+    @media screen and (max-width: 830px) {
+      width: 100%;
+      height: 400px;
+    }
     @media screen and (max-width: 450px) {
       width: 100%;
       height: 300px;
